--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/cnikolai/liri-node-app-/issues"
   },
-  "homepage": "https://github.com/cnikolai/liri-node-app-#readme"
+  "homepage": "https://github.com/cnikolai/liri-node-app-#readme",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "dotenv": "^7.0.0",
+    "moment": "^2.24.0",
+    "node-spotify-api": "^1.0.7",
+    "spotify": "^0.3.0",
+    "spotify-web-api-js": "^1.2.0",
+    "spotify-web-api-node": "^4.0.0"
+  }
 }
